# snakes-sdl

./: .clang-format  .clangd  .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  README.md  build.ninja
includes/: init.h  scenes.h  state.h  textures.h
src/: game.c  gameover.c  init.c  main.c  state.c  textures.c  title.c
